CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

GET_FILENAME_COMPONENT(MYNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" MYNAME ${MYNAME})
PROJECT(${MYNAME} C CXX)

FILE(GLOB SRC  include/*.h 
               source/*.cpp  
               ${HM_LIB_SOURCE_DIR}/TAppCommon/* )

INCLUDE_DIRECTORIES( include 
                     ${CMAKE_SOURCE_DIR}/source/lib/PccLibCommon/include/
                     ${CMAKE_SOURCE_DIR}/source/lib/PccLibBitstreamCommon/include/ )

SET( LIBS PccLibCommon )
IF( USE_HMLIB_VIDEO_CODEC )
  INCLUDE_DIRECTORIES( ${HM_LIB_SOURCE_DIR}/  )
  SET( LIBS ${LIBS} TLibCommon TLibDecoder )
ENDIF()
IF( USE_JMLIB_VIDEO_CODEC )
    INCLUDE_DIRECTORIES( ${JM_LIB_SOURCE_DIR}/lib/lcommon/
                         ${JM_LIB_SOURCE_DIR}/app/ldecod/ )
    SET( LIBS ${LIBS} ldecod )
ENDIF()
IF( USE_FFMPEG_VIDEO_CODEC )  
  INCLUDE_DIRECTORIES( ${FFMPEG_INCLUDE} )
  IF( WIN32 OR MSVC OR MSYS OR MINGW )
    LINK_DIRECTORIES( ${FFMPEG_DEV_DIR}/lib ) 
  ENDIF()  
  SET( LIBS ${LIBS} ${AVCODEC_LIBRARY} ${AVUTIL_LIBRARY} ${AVFORMAT_LIBRARY} )
ENDIF()
IF( USE_VTMLIB_VIDEO_CODEC )
    SET( LIBS ${LIBS} CommonLib DecoderLib_vtm )
ENDIF()
IF( USE_HMAPP_VIDEO_CODEC )
  INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/dependencies/PccLibHevcParser/include )
  SET( LIBS ${LIBS} PccLibHevcParser )
ENDIF()
IF( USE_JMAPP_VIDEO_CODEC )
  INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/dependencies/PccLibAvcParser/include )
  SET( LIBS ${LIBS} PccLibAvcParser )
ENDIF()
IF( USE_SHMAPP_VIDEO_CODEC )
  INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/dependencies/PccLibShvcParser/include )
  SET( LIBS ${LIBS} PccLibShvcParser )
ENDIF()
ADD_LIBRARY( ${MYNAME} ${LINKER} ${SRC} )

If( MSVC )
TARGET_LINK_LIBRARIES( ${MYNAME} ${LIBS} ws2_32)
ELSE()
TARGET_LINK_LIBRARIES( ${MYNAME} ${LIBS} )
ENDIF()

SET_TARGET_PROPERTIES( ${MYNAME} PROPERTIES LINKER_LANGUAGE CXX)
